fixed: product-short-des: white-space:pre-wrap

--- a/public/css/productDetails.css
+++ b/public/css/productDetails.css
@@ -124,6 +124,7 @@ body {
 .product-short-des {
   margin-top: 1.5rem;
   font-size: 1.4rem;
+  white-space: pre-wrap;
   opacity: 0.5;
 }
 
